add reactive approach